<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather</string>
    <string name="change_city">Change city</string>

    <!-- APP ID here -->
    <string name="open_weather_maps_app_id">11111</string>

    <string name=" ">Change city</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>


    <string name="prompt_username">Username</string>
    <string name="error_message">Please enter your user name.</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_home_activity">Home</string>
    <string name="title_my_location">My Location</string>
    <string name="title_close_app">Close</string>
    <string name="title_app_settings">Settings</string>
    <string name="title_app_help">Help</string>
    <string name="title_actions">ACTIONS</string>
    <string name="title_activities">ACTIVITIES</string>
    <string name="title_sync">SYNC</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">NEXT</string>

    <string name="place_not_found">Sorry, no weather data found.</string>

</resources>